Parallel version should be up and running too

--- a/CandW-Parallel.ipynb
+++ b/CandW-Parallel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -392,86 +392,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for id_route1, route in enumerate(routes):\n",
+    "def there_is_a_possible_merge(i, j):\n",
     "    \n",
-    "    while True:\n",
-    "                \n",
-    "        if (routes[id_route1] == (-1,-1,-1)):\n",
-    "            break\n",
+    "    \n",
+    "    for id1, route1 in enumerate(routes):\n",
     "        \n",
-    "        \"\"\"\n",
-    "        Next thing to do should be modify the for underneath this comment so that it saves an array of valid routes, and at the end, if the array is not empty,\n",
-    "        check which one of the possible merges is the best and then merge with that\n",
-    "        \n",
-    "        \"\"\"\n",
-    "                \n",
-    "        found_id = -1\n",
-    "        direction_of_merge = 'l'\n",
-    "        \n",
-    "        available_merges = []\n",
-    "        for id_route2, route2 in enumerate(routes):\n",
-    "\n",
-    "            if (routes[id_route2] == (-1,-1,-1)):\n",
+    "        for id2, route2 in enumerate(routes):\n",
+    "            \n",
+    "            if route1 == (-1, -1, -1) or route2 == (-1, -1, -1):\n",
     "                continue\n",
-    "               \n",
-    "            if (id_route1 != id_route2):\n",
-    "                    direction_of_merge = is_route_merge_valid(id_route1, id_route2)\n",
-    "                    if direction_of_merge != \"\":\n",
-    "                            if direction_of_merge == 'l' or direction_of_merge == 'r':\n",
-    "                                available_merges += [(id_route2, direction_of_merge)]\n",
-    "                            else:\n",
-    "                                available_merges += [(id_route2, 'l')]\n",
-    "                                available_merges += [(id_route2, 'r')]\n",
+    "                \n",
+    "            if (id1 != id2):\n",
+    "                \n",
+    "                if (route1[1] == j and route2[-2] == i):\n",
     "                    \n",
-    "        \n",
-    "        if (len(available_merges) == 0):\n",
-    "            break\n",
-    "        #print(available_merges)\n",
-    "        found_id, direction_of_merge= find_first_merge(id_route1, available_merges)\n",
-    "        if routes[found_id] != (-1,-1,-1):\n",
-    "            merge_two_routes(id_route1, found_id, direction_of_merge)\n",
-    "                 "
+    "                    return (id1, id2)\n",
+    "    \n",
+    "    return -1\n",
+    "                \n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, saving in enumerate(ordered_savings[25:]): #25: 'cause we are not interested in the infinite savings, since their i,j pairs won't allow feasible merges\n",
+    "    \n",
+    "    \n",
+    "    i, j = saving[1]\n",
+    "    \n",
+    "    res = there_is_a_possible_merge(i,j)\n",
+    "    \n",
+    "    if res != -1:\n",
+    "        \n",
+    "        id1, id2 = res\n",
+    "        if is_route_merge_valid(id1, id2) == 'l':\n",
+    "            merge_two_routes(id1, id2, 'l')\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 2, 1, 22, 24, 20, 9, 0),\n",
-       " (-1, -1, -1),\n",
-       " (0, 4, 3, 12, 10, 21, 0),\n",
-       " (-1, -1, -1),\n",
-       " (0, 11, 17, 5, 0),\n",
-       " (0, 23, 19, 6, 0),\n",
-       " (0, 16, 7, 0),\n",
-       " (0, 13, 8, 0),\n",
+       "[(-1, -1, -1),\n",
        " (-1, -1, -1),\n",
        " (-1, -1, -1),\n",
        " (-1, -1, -1),\n",
+       " (0, 5, 0),\n",
+       " (0, 6, 0),\n",
+       " (0, 4, 14, 7, 0),\n",
+       " (0, 1, 22, 19, 20, 8, 0),\n",
+       " (0, 9, 0),\n",
+       " (-1, -1, -1),\n",
+       " (0, 11, 0),\n",
        " (-1, -1, -1),\n",
        " (-1, -1, -1),\n",
-       " (0, 15, 14, 0),\n",
        " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
+       " (0, 15, 0),\n",
+       " (0, 16, 0),\n",
+       " (0, 2, 13, 17, 0),\n",
        " (0, 18, 0),\n",
        " (-1, -1, -1),\n",
        " (-1, -1, -1),\n",
+       " (0, 3, 12, 10, 21, 0),\n",
        " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1)]"
+       " (0, 23, 0),\n",
+       " (0, 24, 0)]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,37 +488,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 2, 1, 22, 24, 20, 9, 0)\n",
-      "1409\n",
-      "1303\n",
-      "(0, 4, 3, 12, 10, 21, 0)\n",
-      "582\n",
-      "1537\n",
-      "(0, 11, 17, 5, 0)\n",
+      "(0, 5, 0)\n",
       "0\n",
-      "1524\n",
-      "(0, 23, 19, 6, 0)\n",
+      "483\n",
+      "(0, 6, 0)\n",
       "0\n",
-      "1161\n",
-      "(0, 16, 7, 0)\n",
+      "389\n",
+      "(0, 4, 14, 7, 0)\n",
+      "194\n",
+      "1437\n",
+      "(0, 1, 22, 19, 20, 8, 0)\n",
+      "558\n",
+      "1272\n",
+      "(0, 9, 0)\n",
       "0\n",
-      "1109\n",
-      "(0, 13, 8, 0)\n",
+      "343\n",
+      "(0, 11, 0)\n",
       "0\n",
-      "1262\n",
-      "(0, 15, 14, 0)\n",
+      "350\n",
+      "(0, 15, 0)\n",
       "0\n",
-      "1478\n",
+      "476\n",
+      "(0, 16, 0)\n",
+      "0\n",
+      "674\n",
+      "(0, 2, 13, 17, 0)\n",
+      "851\n",
+      "1501\n",
       "(0, 18, 0)\n",
       "0\n",
-      "675\n"
+      "675\n",
+      "(0, 3, 12, 10, 21, 0)\n",
+      "388\n",
+      "1537\n",
+      "(0, 23, 0)\n",
+      "0\n",
+      "362\n",
+      "(0, 24, 0)\n",
+      "0\n",
+      "550\n"
      ]
     }
    ],
@@ -613,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
