Fixed some major problems

--- a/CandW.ipynb
+++ b/CandW.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,20 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_of_customers = int(content[0])\n",
     "n_of_vehicles = int(content[2])\n",
     "capacity = int(content[3].split()[3])\n",
-    "linehaul_vector = [int(i.split()[3]) for i in content[4:]] #linehaul data is in the fourth column\n",
-    "backhaul_vector = [int(i.split()[2]) for i in content[4:]] #and backhaul is in the third"
+    "linehaul_vector = [int(i.split()[2]) for i in content[4:]] #linehaul data is in the fourth column\n",
+    "backhaul_vector = [int(i.split()[3]) for i in content[4:]] #and backhaul is in the third"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,9 @@
     "            i+=1\n",
     "            \n",
     "    starting_point = i\n",
-    "    if i < len(possible_route[1:-1]):\n",
+    "    \n",
+    "\n",
+    "    if i < len(possible_route[1:-1]) and i != 0:\n",
     "        for node_touched in possible_route[starting_point+1:-1]:\n",
     "            \n",
     "            if backhaul_vector[node_touched] == 0 and i != len(possible_route): #we are trying to linehaul AFTER we started backhauling... constraint broken:\n",
@@ -254,6 +256,9 @@
     "                \n",
     "        \n",
     "    if (cost_of_possible_route_backhaul > capacity or cost_of_possible_route_linehaul > capacity):\n",
+    "        is_right_possible = False\n",
+    "        \n",
+    "    if (cost_of_possible_route_linehaul == 0):\n",
     "        is_right_possible = False\n",
     "        \n",
     "        \n",
@@ -276,7 +281,7 @@
     "            i+=1\n",
     "            \n",
     "    starting_point = i\n",
-    "    if i < len(possible_route[1:-1]):\n",
+    "    if i < len(possible_route[1:-1]) and i != 0:\n",
     "        for node_touched in possible_route[starting_point+1:-1]:\n",
     "            \n",
     "            if backhaul_vector[node_touched] == 0 and i != len(possible_route): #we are trying to linehaul AFTER we started backhauling... constraint broken:\n",
@@ -287,6 +292,9 @@
     "                \n",
     "        \n",
     "    if (cost_of_possible_route_backhaul > capacity or cost_of_possible_route_linehaul > capacity):\n",
+    "        is_left_possible = False\n",
+    "        \n",
+    "    if (cost_of_possible_route_linehaul == 0):\n",
     "        is_left_possible = False\n",
     "        \n",
     "        \n",
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,15 +447,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 2, 1, 22, 24, 20, 9, 0),\n",
+       "[(0, 9, 20, 24, 22, 1, 2, 0),\n",
        " (-1, -1, -1),\n",
-       " (0, 4, 3, 12, 10, 21, 0),\n",
+       " (0, 21, 10, 12, 3, 4, 0),\n",
        " (-1, -1, -1),\n",
        " (0, 11, 17, 5, 0),\n",
        " (0, 23, 19, 6, 0),\n",
@@ -471,7 +479,7 @@
        " (-1, -1, -1)]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,37 +490,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 2, 1, 22, 24, 20, 9, 0)\n",
-      "1409\n",
+      "(0, 9, 20, 24, 22, 1, 2, 0)\n",
       "1303\n",
-      "(0, 4, 3, 12, 10, 21, 0)\n",
-      "582\n",
+      "1409\n",
+      "(0, 21, 10, 12, 3, 4, 0)\n",
       "1537\n",
+      "582\n",
       "(0, 11, 17, 5, 0)\n",
-      "0\n",
       "1524\n",
+      "0\n",
       "(0, 23, 19, 6, 0)\n",
-      "0\n",
       "1161\n",
+      "0\n",
       "(0, 16, 7, 0)\n",
-      "0\n",
       "1109\n",
+      "0\n",
       "(0, 13, 8, 0)\n",
-      "0\n",
       "1262\n",
+      "0\n",
       "(0, 15, 14, 0)\n",
-      "0\n",
       "1478\n",
-      "(0, 18, 0)\n",
       "0\n",
-      "675\n"
+      "(0, 18, 0)\n",
+      "675\n",
+      "0\n"
      ]
     }
    ],
@@ -535,10 +543,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Route:\n",
+      "(0, 9, 20, 24, 22, 1, 2, 0)\n",
+      "L\n",
+      "L\n",
+      "L\n",
+      "L\n",
+      "B\n",
+      "B\n",
+      "Route:\n",
+      "(0, 21, 10, 12, 3, 4, 0)\n",
+      "L\n",
+      "L\n",
+      "L\n",
+      "B\n",
+      "B\n",
+      "Route:\n",
+      "(0, 11, 17, 5, 0)\n",
+      "L\n",
+      "L\n",
+      "L\n",
+      "Route:\n",
+      "(0, 23, 19, 6, 0)\n",
+      "L\n",
+      "L\n",
+      "L\n",
+      "Route:\n",
+      "(0, 16, 7, 0)\n",
+      "L\n",
+      "L\n",
+      "Route:\n",
+      "(0, 13, 8, 0)\n",
+      "L\n",
+      "L\n",
+      "Route:\n",
+      "(0, 15, 14, 0)\n",
+      "L\n",
+      "L\n",
+      "Route:\n",
+      "(0, 18, 0)\n",
+      "L\n"
+     ]
+    }
+   ],
+   "source": [
+    "for route in routes:\n",
+    "    \n",
+    "    \n",
+    "    if route != (-1, -1, -1):\n",
+    "        \n",
+    "        print ('Route:')\n",
+    "        print (route)\n",
+    "        \n",
+    "        for item in route[1:-1]:\n",
+    "            \n",
+    "            if linehaul_vector[item] != 0:\n",
+    "                print('L')\n",
+    "                \n",
+    "            if backhaul_vector[item] != 0:\n",
+    "                print('B')\n",
+    "                \n"
+   ]
   },
   {
    "cell_type": "code",
@@ -613,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
