--- a/CandW-Parallel.ipynb
+++ b/CandW-Parallel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,20 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_of_customers = int(content[0])\n",
     "n_of_vehicles = int(content[2])\n",
     "capacity = int(content[3].split()[3])\n",
-    "linehaul_vector = [int(i.split()[3]) for i in content[4:]] #linehaul data is in the fourth column\n",
-    "backhaul_vector = [int(i.split()[2]) for i in content[4:]] #and backhaul is in the third"
+    "linehaul_vector = [int(i.split()[2]) for i in content[4:]] #linehaul data is in the fourth column\n",
+    "backhaul_vector = [int(i.split()[3]) for i in content[4:]] #and backhaul is in the third"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +256,9 @@
     "    if (cost_of_possible_route_backhaul > capacity or cost_of_possible_route_linehaul > capacity):\n",
     "        is_right_possible = False\n",
     "        \n",
+    "    if (cost_of_possible_route_linehaul == 0): # we are only backhauling\n",
+    "        is_right_possible = False\n",
+    "\n",
     "        \n",
     "    \"\"\"Now the other possible route.\"\"\"\n",
     "        \n",
@@ -289,6 +292,9 @@
     "    if (cost_of_possible_route_backhaul > capacity or cost_of_possible_route_linehaul > capacity):\n",
     "        is_left_possible = False\n",
     "        \n",
+    "    if (cost_of_possible_route_linehaul == 0): # we are only backhauling\n",
+    "        is_left_possible = False\n",
+    "\n",
     "        \n",
     "    #print(is_left_possible, is_right_possible)\n",
     "        \n",
@@ -307,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,11 +426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx, saving in enumerate(ordered_savings[25:]): #25: 'cause we are not interested in the infinite savings, since their i,j pairs won't allow feasible merges\n",
+    "for idx, saving in enumerate(ordered_savings[25:]): # '25:' because we are not interested in the infinite savings, since their i,j pairs won't allow feasible merges\n",
     "    \n",
     "    \n",
     "    i, j = saving[1]\n",
@@ -434,109 +440,87 @@
     "    if res != -1:\n",
     "        \n",
     "        id1, id2 = res\n",
-    "        if is_route_merge_valid(id1, id2) == 'l':\n",
-    "            merge_two_routes(id1, id2, 'l')\n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "    "
+    "        direction = is_route_merge_valid(id1, id2)\n",
+    "        if direction == 'l' or direction == 'lr':\n",
+    "            merge_two_routes(id1, id2, 'l')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (0, 5, 0),\n",
-       " (0, 6, 0),\n",
-       " (0, 4, 14, 7, 0),\n",
-       " (0, 1, 22, 19, 20, 8, 0),\n",
-       " (0, 9, 0),\n",
-       " (-1, -1, -1),\n",
-       " (0, 11, 0),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (0, 15, 0),\n",
-       " (0, 16, 0),\n",
-       " (0, 2, 13, 17, 0),\n",
-       " (0, 18, 0),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (0, 3, 12, 10, 21, 0),\n",
-       " (-1, -1, -1),\n",
-       " (0, 23, 0),\n",
-       " (0, 24, 0)]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "routes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 5, 0)\n",
-      "0\n",
-      "483\n",
-      "(0, 6, 0)\n",
-      "0\n",
-      "389\n",
-      "(0, 4, 14, 7, 0)\n",
-      "194\n",
-      "1437\n",
-      "(0, 1, 22, 19, 20, 8, 0)\n",
-      "558\n",
-      "1272\n",
-      "(0, 9, 0)\n",
-      "0\n",
-      "343\n",
-      "(0, 11, 0)\n",
-      "0\n",
-      "350\n",
-      "(0, 15, 0)\n",
-      "0\n",
-      "476\n",
-      "(0, 16, 0)\n",
-      "0\n",
-      "674\n",
-      "(0, 2, 13, 17, 0)\n",
-      "851\n",
-      "1501\n",
-      "(0, 18, 0)\n",
-      "0\n",
-      "675\n",
-      "(0, 3, 12, 10, 21, 0)\n",
-      "388\n",
-      "1537\n",
-      "(0, 23, 0)\n",
-      "0\n",
-      "362\n",
-      "(0, 24, 0)\n",
-      "0\n",
-      "550\n"
+      "Route:\n",
+      "(0, 9, 24, 20, 22, 1, 0)\n",
+      "L\n",
+      "L\n",
+      "L\n",
+      "L\n",
+      "B\n",
+      "Route:\n",
+      "(0, 8, 13, 2, 0)\n",
+      "L\n",
+      "L\n",
+      "B\n",
+      "Route:\n",
+      "(0, 15, 10, 12, 3, 0)\n",
+      "L\n",
+      "L\n",
+      "L\n",
+      "B\n",
+      "Route:\n",
+      "(0, 11, 14, 4, 0)\n",
+      "L\n",
+      "L\n",
+      "B\n",
+      "Route:\n",
+      "(0, 5, 17, 0)\n",
+      "L\n",
+      "L\n",
+      "Route:\n",
+      "(0, 7, 18, 0)\n",
+      "L\n",
+      "L\n",
+      "Route:\n",
+      "(0, 16, 21, 0)\n",
+      "L\n",
+      "L\n",
+      "Route:\n",
+      "(0, 6, 19, 23, 0)\n",
+      "L\n",
+      "L\n",
+      "L\n"
      ]
     }
    ],
+   "source": [
+    "for route in routes:\n",
+    "    \n",
+    "    \n",
+    "    if route != (-1, -1, -1):\n",
+    "        \n",
+    "        print ('Route:')\n",
+    "        print (route)\n",
+    "        \n",
+    "        for item in route[1:-1]:\n",
+    "            \n",
+    "            if linehaul_vector[item] != 0:\n",
+    "                print('L')\n",
+    "                \n",
+    "            if backhaul_vector[item] != 0:\n",
+    "                print('B')\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for route in routes:\n",
     "    if route == (-1,-1,-1):\n",
@@ -559,7 +543,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ordered_savings"
+   ]
   },
   {
    "cell_type": "code",
@@ -634,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
