--- a/CandW.ipynb
+++ b/CandW.ipynb
@@ -611,17 +611,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-3a48f264a8da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mroute\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mroute\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0mtotal_cost\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0mcost_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroute\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "total_cost = 0\n",
+    "\n",
+    "for route in routes:\n",
+    "    \n",
+    "    if route != (-1, -1, -1):\n",
+    "        \n",
+    "        for idx, item in route[:-1]:\n",
+    "            \n",
+    "            total_cost+=cost_matrix[item, route[idx+1]]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 13, 23, 24, 22, 1, 5, 2, 0),\n",
+       " (-1, -1, -1),\n",
+       " (0, 25, 10, 12, 3, 4, 0),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (0, 7, 19, 6, 0),\n",
+       " (-1, -1, -1),\n",
+       " (0, 15, 8, 0),\n",
+       " (0, 17, 20, 9, 0),\n",
+       " (-1, -1, -1),\n",
+       " (0, 14, 11, 0),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (0, 18, 21, 16, 0),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1),\n",
+       " (-1, -1, -1)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "routes"
+   ]
   },
   {
    "cell_type": "code",
