Some refactoring to make local searches easier

--- a/CandW.ipynb
+++ b/CandW.ipynb
@@ -220,20 +220,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_route_merge_valid(id_route1, id_route2):\n",
+    "def is_route_valid (route_to_check):\n",
     "    \n",
-    "    \"\"\"First, try if you can merge it with the end of route1 to end of route2\"\"\"\n",
-    "        \n",
-    "    possible_route = list( routes[id_route1][:-1] + routes[id_route2][1:]) #the merge itself is just skipping the left and right\n",
-    "    \n",
+    "    is_route_possible = True\n",
+    "    cost_of_possible_route_linehaul = 0\n",
+    "    cost_of_possible_route_backhaul = 0\n",
     "    i = 0\n",
     "    \n",
-    "    \n",
-    "    cost_of_possible_route_backhaul = 0\n",
-    "    cost_of_possible_route_linehaul = 0\n",
-    "    is_right_possible = True\n",
-    "    \n",
-    "    for node_touched in possible_route[1:-1]:\n",
+    "    for node_touched in route_to_check[1:-1]:\n",
     "        \n",
     "        if linehaul_vector[node_touched] == 0:#linehaul_vector is 0 if a node is not a linehaul node, so we have to go to the next for\n",
     "            break\n",
@@ -242,13 +236,11 @@
     "            i+=1\n",
     "            \n",
     "    starting_point = i\n",
-    "    \n",
-    "\n",
-    "    if i < len(possible_route[1:-1]) and i != 0:\n",
-    "        for node_touched in possible_route[starting_point+1:-1]:\n",
+    "    if i < len(route_to_check[1:-1]):\n",
+    "        for node_touched in route_to_check[starting_point+1:-1]:\n",
     "            \n",
-    "            if backhaul_vector[node_touched] == 0 and i != len(possible_route): #we are trying to linehaul AFTER we started backhauling... constraint broken:\n",
-    "                is_right_possible = False\n",
+    "            if backhaul_vector[node_touched] == 0 and i != len(route_to_check): #we are trying to linehaul AFTER we started backhauling... constraint broken:\n",
+    "                is_route_possible = False\n",
     "                #print(i, backhaul_vector[node_touched], node_touched)\n",
     "            else:\n",
     "                cost_of_possible_route_backhaul += backhaul_vector[node_touched]\n",
@@ -256,48 +248,36 @@
     "                \n",
     "        \n",
     "    if (cost_of_possible_route_backhaul > capacity or cost_of_possible_route_linehaul > capacity):\n",
-    "        is_right_possible = False\n",
+    "        is_route_possible = False\n",
     "        \n",
-    "    if (cost_of_possible_route_linehaul == 0):\n",
-    "        is_right_possible = False\n",
+    "    if (cost_of_possible_route_linehaul == 0): # we are only backhauling\n",
+    "        is_route_possible = False\n",
     "        \n",
     "        \n",
+    "    return is_route_possible\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_route_merge_valid(id_route1, id_route2):\n",
+    "    \n",
+    "    \"\"\"First, try if you can merge it with the end of route1 to end of route2\"\"\"\n",
+    "        \n",
+    "    possible_route = list( routes[id_route1][:-1] + routes[id_route2][1:]) #the merge itself is just skipping the left and right\n",
+    "    \n",
+    "    is_right_possible = is_route_valid(possible_route)\n",
     "    \"\"\"Now the other possible route.\"\"\"\n",
     "        \n",
     "    possible_route = list( routes[id_route2][:-1] + routes[id_route1][1:]) #the merge itself is just skipping the left and right\n",
     "    \n",
-    "    i = 0\n",
+    "    is_left_possible = is_route_valid(possible_route)\n",
     "    \n",
-    "    cost_of_possible_route_backhaul = 0\n",
-    "    cost_of_possible_route_linehaul = 0\n",
-    "    is_left_possible = True\n",
-    "    \n",
-    "    for node_touched in possible_route[1:-1]:\n",
-    "        \n",
-    "        if linehaul_vector[node_touched] == 0:#linehaul_vector is 0 if a node is not a linehaul node, so we have to go to the next for\n",
-    "            break\n",
-    "        else:\n",
-    "            cost_of_possible_route_linehaul += linehaul_vector[node_touched]\n",
-    "            i+=1\n",
-    "            \n",
-    "    starting_point = i\n",
-    "    if i < len(possible_route[1:-1]) and i != 0:\n",
-    "        for node_touched in possible_route[starting_point+1:-1]:\n",
-    "            \n",
-    "            if backhaul_vector[node_touched] == 0 and i != len(possible_route): #we are trying to linehaul AFTER we started backhauling... constraint broken:\n",
-    "                is_left_possible = False\n",
-    "            else:\n",
-    "                cost_of_possible_route_backhaul += backhaul_vector[node_touched]\n",
-    "                i+=1\n",
-    "                \n",
-    "        \n",
-    "    if (cost_of_possible_route_backhaul > capacity or cost_of_possible_route_linehaul > capacity):\n",
-    "        is_left_possible = False\n",
-    "        \n",
-    "    if (cost_of_possible_route_linehaul == 0):\n",
-    "        is_left_possible = False\n",
-    "        \n",
-    "        \n",
     "    #print(is_left_possible, is_right_possible)\n",
     "        \n",
     "    if not is_left_possible and not is_right_possible:\n",
@@ -309,13 +289,12 @@
     "    else:\n",
     "        return 'r'\n",
     "        \n",
-    "                \n",
-    "    "
+    "                \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +459,7 @@
        " (-1, -1, -1)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -611,21 +590,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-3a48f264a8da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mroute\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mroute\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0mtotal_cost\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0mcost_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroute\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_cost = 0\n",
     "\n",
@@ -633,53 +600,29 @@
     "    \n",
     "    if route != (-1, -1, -1):\n",
     "        \n",
-    "        for idx, item in route[:-1]:\n",
+    "        for idx, item in enumerate(route[:-1]):\n",
     "            \n",
     "            total_cost+=cost_matrix[item, route[idx+1]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 13, 23, 24, 22, 1, 5, 2, 0),\n",
-       " (-1, -1, -1),\n",
-       " (0, 25, 10, 12, 3, 4, 0),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (0, 7, 19, 6, 0),\n",
-       " (-1, -1, -1),\n",
-       " (0, 15, 8, 0),\n",
-       " (0, 17, 20, 9, 0),\n",
-       " (-1, -1, -1),\n",
-       " (0, 14, 11, 0),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (0, 18, 21, 16, 0),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1),\n",
-       " (-1, -1, -1)]"
+       "282894.4978628099"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "routes"
+    "total_cost"
    ]
   },
   {
