--- a/CandW-Parallel.ipynb
+++ b/CandW-Parallel.ipynb
@@ -167,13 +167,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_two_routes(id_route, found_id, direction_of_merge):\n",
+    "def merge_two_routes(id_route1, id_route2, direction_of_merge):\n",
     "\n",
-    "    if id_route== found_id:\n",
+    "    if id_route1 == id_route2:\n",
     "        return\n",
     "    \n",
-    "    tmp_list1 = list(routes[id_route])\n",
-    "    tmp_list2 = list(routes[found_id])\n",
+    "    tmp_list1 = list(routes[id_route1])\n",
+    "    tmp_list2 = list(routes[id_route2])\n",
     "        \n",
     "    tmp_list1.pop(0)\n",
     "    tmp_list1.pop(-1)\n",
@@ -182,13 +182,13 @@
     "    \n",
     "    if direction_of_merge == 'l':\n",
     "        \n",
-    "        routes[id_route] = tuple([0]+tmp_list2+tmp_list1+[0])\n",
+    "        routes[id_route1] = tuple([0]+tmp_list2+tmp_list1+[0])\n",
     "    \n",
     "    if direction_of_merge == 'r':\n",
     "        \n",
-    "        routes[id_route] = tuple([0]+tmp_list1+tmp_list2+[0])\n",
+    "        routes[id_route1] = tuple([0]+tmp_list1+tmp_list2+[0])\n",
     "    \n",
-    "    routes[found_id] = (-1,-1,-1)\n",
+    "    routes[id_route2] = (-1,-1,-1)\n",
     "\n",
     "\n"
    ]
